--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     "discord": "https://discord.gg/yMs5vgvyV4"
   },
   "require": {
-    "php": ">=8.2"
+    "php": ">=8.2",
+    "monolog/monolog": "^3.5"
   },
-  "require-dev": {},
   "autoload": {
     "psr-4": {
       "Discommand2\\Core\\": "src/"
