--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
   },
   "require": {
     "php": ">=8.2",
-    "monolog/monolog": "^3.5",
-    "symfony/process": "^6.3"
+    "monolog/monolog": "^3.5"
   },
   "autoload": {
     "psr-4": {
